<resources>
    <string name="app_name">Bielefeld University</string>
    <string name="Bielefeld_University">Bielefeld University</string>
    <string name="About_Bielefeld_and_the_University">About Bielefeld and the University</string>
    <string name="ProspectiveStudents">Prospective Students</string>
    <string name="Title_UniBie">es haj em</string>
    <string name="BeforeArrival">Before Arrival</string>
    <string name="AfterArrival">After Arrival</string>
    <string name="Deadlines">Deadlines and Applications</string>
    <string name="ServiceInstitutions">Services and Institutions</string>
    <string name="FinancialAid">Financing</string>
    <string name="ISSC">International Student Services Centre</string>
    <string name="ISSC_title">ISSC</string>
    <string name="UniBie"> <b>A Lovable place to Live\n\n</b>
        <br>Down to earth, pleasantly normal and laid back: a good description of many of the citys residents and of Bielefeld itself. It is precisely that mixture of a metropolitan atmosphere and almost village-like sociability that makes Bielefeld what it is: an especially lovable city to live in. \n\n</br>
        <br>With a population of over 330,000 (and constantly on the rise), Bielefeld is one of the 20 largest cities in Germany. Its residents particularly appreciate the high quality of life, the advantages of a strong economic location and the range of educational and scientific facilities. More than one billion euros has been invested by the State of North Rhine-Westphalia into Campus Bielefeld, shared between Bielefeld University and the University of Applied Sciences. This has resulted in one of the most modern facilities for education and research in Germany.\n\n</br>
        <br>Few cities are as green as Bielefeld, thanks to its location amid the Teutoburg Forest, numerous parks as well as green transport corridors, with 762 kilometres of footpaths traversing the city area. For more of a city buzz, visit Siegfried Platz – known affectionately to locals as "Siggi" – in Bielefeld West, as well as Kesselbrink and Boulevard.\n\n</br>

        <b>Bielefeld University: Overview\n\n</b>
        <br>The university is located in the west of Bielefeld next to the Teutoburg Forest. The main building, which houses all the faculties and institutes, as well as the large library, is a functional concrete structure, typical of the 1960s.\n\n</br>
        <br>Intercity trains running between Cologne/Bonn and Berlin stop regularly at Bielefeld, and the university can be accessed via city tram (Line 4) in about 10 minutes from the city center—or in about 15 minutes by car. The nearest airport, Paderborn/Lippstadt, is about 50 kilometres southeast of  Bielefeld.\n\n</br>



        <b>Internationalisation strategy\n\n</b>
        <br>Bielefeld University is an internationally successful institution with networks across the globe. Its hallmark is that the experience of internationalisation is firmly anchored in all areas of the University. Bielefeld University sees itself as a social space for reflection, characterised by international exchange and cultural openness.\n\n</br>
        <br>It sees internationalisation as a process of change that leads to an intensification and qualitative enhancement of the international relations both within and outside the University. This process affects not only research, teaching and study, but the entire institution and the ‘culture of togetherness’. Internationalisation at Bielefeld University lives from and with scholars and students cooperating internationally. It is characterised by personal interaction and open communication.\n\n</br>
        <br>In many research areas, Bielefeld University is a leading research institution which attracts researchers from abroad with its strong profile and relevance. Each year it welcomes to Bielefeld several hundred visiting scholars as well as students from the whole world. These include at-risk and refugee scholars, which the University supports as a member of the Scholars at Risk Network, as well as refugees who are wishing to study. Study programmes in English, Double Degree Programmes as well as study programmes with an international track prepare students from Germany and abroad for the international job market.\n\n</br>
        <br>Students thus acquire intercultural competence in an environment characterised by diversity. Apart from the internationalisation ‘abroad’, the internationalisation that takes place ‘at home’ also plays a significant role and is another facet of an integrated internationalisation strategy. For this reason, the University fosters international cooperation and partnerships with universities on all continents and participates in international research projects. Students are offered various opportunities to gain experience abroad.\n\n</br>
    </string>
    <string name="ProStu">
        <b>Prospective students\n\n</b>
        <br>  Youre interested in studying at Bielefeld University?\n</br>
        <br>Making the decision to study abroad might be a bold one, but provides the opportunity to get to know different cultures and languages and develop a global perspective which is becoming more and more important today.\n\n</br>
        <br>Bielefeld University recognises this and is therefore strongly committed to internationalisation. There are numerous cooperation agreements for research and teaching as well as for student exchange with major institutions around the world.
        Bielefeld University provides many advantages which contribute to an excellent environment for a good working and studying life:\n</br>
•	New perspectives and better career opportunities through a broad variety of interdisciplinary study courses\n
•	Multiple support and services for studies guarantee good integration\n
•	Top-ranked research in many areas and awards for excellent teaching\n
•	One of the best libraries in Germany\n
•	A campus university with institutions in close proximity to one another - "Everything under one roof"\n
•	Affordable student accommodation in close vicinity to the campus\n
•	One of the safest major cities in Germany\n
•	Diverse cultural and leisure time facilities, numerous parks and the Teutoburg Forest right on your doorstep\n
•   Great service for international students (support in settling in, many institutions especially for international students, assistance in finding accommodation, planning your studies, getting to know fellow students)\n
•	Very wide range of degree programs to suit your interests and talents\n
•	Universities focus on excellent research resulting in excellent teaching\n
•	Close co-operations between university and industry so that a close connection between theory and practice is established\n
•	Worldwide networks, based on fruitful co-operations with universities all over the world; German degrees are widely accepted and numerous International Degree Programs prepare you for an international career\n
•	Location in the heart of Europe\n
•	One of the worlds largest and most technologically advanced economies\n
•	Depending on the federal state, tuition fees are either very low or they do not exist at all\n
Please find more information on the study system, higher education institutions and life in Germany here: www.study-in.de/en\n
In order to choose a suitable study course, get acquainted with the wide offer of the study courses of the Bielefeld University.
application@uni-bielefeld.de\n</string>
    <string name="cb1">Schritt 1: Persönliche anmeldung des Wohnsitzes (innerhalb der ersten 14 Tage nach der Ankunft) <br />
    Formular zur Wohnungsgeberbestätigung vom Vermieter ausfüllen lassen (online verfügbar über hhps://www.bielefeld.de/ftp/formulare/Wohnungsgeberbestätigung0119.pdf
    Im Zeitraum vom 30.9-18.10., Mo.-Do. von 9 bis 15 Uhr, Fr. von 9 bis 13 Uhr am Infopunkt in der Unihalle anmelden ODER zur Bürgerberatung gehen (Neues Rathaus/Bürgeramt, Niederwall 23, 33601 Bielefeld, online Termin reservieren über https://tempus-termine.com/termine/index.php?anlagennr=83)
    nicht vergessen: Personalausweis, Reisepass und ausgefüllte Wohnungsgeberbestätigung vorlegen -> Meldebescheinigung erhalten</string>
    <string name="cb2">Schritt 2: Krankenversicherung abschließen(innerhalb von 30 Tagen nach der Ankunft)
    Gleichartigkeit der bestehenden Versicherung prüfen (insbesondere wichtig für Studierende uas EU-Ländern sowie Partner-Ländern von entsprechenden Sozialversicherungsabkommen)
    Über verschiedene Krankenkassen und Versicherungsmöglichkeiten in Bielefeld informieren
    von einer gesetzlichen Krankenkasse Gleichartigkeit des aktuellen Versicherungsschutz bestätigen lassen ODER eine Krankenversicherung abschließen</string>
    <string name="cb3">Schritt 3:Einschreibung/Immatrikulation
    Immatrikulation im Studierendensekretariat (Sachgebiet Internationale Studierende), für den Bachelor bei Frau Dawkins(D0-102), für den Master bei Frau Rybak(C0-152) oder Frau Schätzel(C0-156)
    Bitte nicht vergessen:
    ausgefüllter Antrag auf EInschreibung
    Krankenversicherungsbescheinigung zur Einschreibung an einer Hochschule
    Studierende aus Nicht_EU-Ländern: Passkopie + gültige Aufenthaltserlaubnis
    Zulassungsschreiben bei zulassungsbeschränkten Studiengängen
    nach Erhalt des Zahlscheins mit den Hochschulzugangsdaten den Semesterbeitrag überweisen
    nach ca. 3 Tagen den freigeschalteten Zugang zum Hochschulportal nutzen, um auf Immatrikulationsbescheinigungen zuzugreifen </string>
    <string name="cb4">Schritt 4: Konto eröffnen
    über verschiedene Banken und Finanzcenter in Bielefeld informieren
    telefonisch oder persönlich einen Termin zur Kontoeröffnung vereinbaren
    zum Termin einen Ausweis, Meldebescheinigung und Immatrikulationsbescheinigung mitnehmen
    gegebenfalls Kontodaten bei Versicherung nachreichen</string>
    <string name="cb5">Schritt 5: Aufenthaltstitel beantragen bei außereuropäischer Staatsbürgerschaft(sobald alle erforderlichen Dokumente vorliegen: spätestens 30 Tage bevor das Einreisevisum abläuft)
        die erforderlichen Dokumente bereitlegen:
        Ausgefülltes Antragsformular
        Gülltiger Ausweis + eine Kopie
        Meldebescheinigung + eine Kopie
        Nachweis über die finanzielle Absicherung
        Krankenversicherungsbescheinigung
        Immatrikulationsbescheinigung
        biometrisches Passbild max. 3 Monate alt
        Verwaltunggebühr (100€ in Bar oder eine EC-Karte)
        zur Ausländerbehörde(Neues Rathaus, Niederwall 23, 33602 Bielefeld
        offene Sprechzeiten: Mo und Di 8-12 Uhr; Do 8-12 Uhr und 14:30-18 Uhr, alternativ vorher einen Termin vereinbaren

    </string>
    <string name="current_language">Deutsch</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="forum">Forum</string>
    <string name="done">Congratulations!!! You accomplished the enrollment procedure</string>
</resources>